@@ -86,9 +86,11 @@ import io.airbyte.config.secrets.SecretsRepositoryWriter;
 import io.airbyte.config.secrets.persistence.RuntimeSecretPersistence;
 import io.airbyte.data.services.SecretPersistenceConfigService;
 import io.airbyte.data.services.WorkspaceService;
+import io.airbyte.featureflag.DiscoverPostprocessInTemporal;
 import io.airbyte.featureflag.FeatureFlagClient;
 import io.airbyte.featureflag.Organization;
 import io.airbyte.featureflag.UseRuntimeSecretPersistence;
+import io.airbyte.featureflag.Workspace;
 import io.airbyte.metrics.lib.MetricAttribute;
 import io.airbyte.metrics.lib.MetricClientFactory;
 import io.airbyte.metrics.lib.MetricTags;
@@ -113,7 +115,6 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import lombok.extern.slf4j.Slf4j;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -340,10 +341,24 @@ public class SchedulerHandler {
     return checkDestinationConnectionFromDestinationCreate(destinationCoreConfig);
   }
 
-  public SourceDiscoverSchemaRead discoverSchemaForSourceFromSourceId(final SourceDiscoverSchemaRequestBody discoverSchemaRequestBody)
+  public SourceDiscoverSchemaRead discoverSchemaForSourceFromSourceId(final SourceDiscoverSchemaRequestBody req)
+      throws ConfigNotFoundException, IOException, JsonValidationException {
+    final SourceConnection source = configRepository.getSourceConnection(req.getSourceId());
+
+    if (featureFlagClient.boolVariation(DiscoverPostprocessInTemporal.INSTANCE, new Workspace(source.getWorkspaceId()))) {
+      return discoverWithPostprocessInTemporal(req, source);
+    } else {
+      return discoverWithLocalPostprocess(req, source);
+    }
+  }
+
+  /**
+   * Runs discover schema and performs postprocessing (catalog diff and connection disabling) locally.
+   */
+  public SourceDiscoverSchemaRead discoverWithLocalPostprocess(final SourceDiscoverSchemaRequestBody discoverSchemaRequestBody,
+                                                               final SourceConnection source)
       throws ConfigNotFoundException, IOException, JsonValidationException {
     final UUID sourceId = discoverSchemaRequestBody.getSourceId();
-    final SourceConnection source = configRepository.getSourceConnection(sourceId);
     final StandardSourceDefinition sourceDef = configRepository.getStandardSourceDefinition(source.getSourceDefinitionId());
     final ActorDefinitionVersion sourceVersion = actorDefinitionVersionHelper.getSourceVersion(sourceDef, source.getWorkspaceId(), sourceId);
     final boolean isCustomConnector = sourceDef.getCustom();
@@ -390,6 +405,76 @@ public class SchedulerHandler {
         .catalog(CatalogConverter.toApi(airbyteCatalog, sourceVersion))
         .jobInfo(emptyJob)
         .catalogId(currentCatalog.get().getId());
+  }
+
+  /**
+   * Runs discover schema and performs postprocessing (catalog diff and connection disabling) in the
+   * temporal workflow.
+   */
+  public SourceDiscoverSchemaRead discoverWithPostprocessInTemporal(final SourceDiscoverSchemaRequestBody req, final SourceConnection source)
+      throws ConfigNotFoundException, IOException, JsonValidationException {
+    final UUID sourceId = req.getSourceId();
+    final StandardSourceDefinition sourceDef = configRepository.getStandardSourceDefinition(source.getSourceDefinitionId());
+    final ActorDefinitionVersion sourceVersion = actorDefinitionVersionHelper.getSourceVersion(sourceDef, source.getWorkspaceId(), sourceId);
+
+    final boolean skipCacheCheck = req.getDisableCache() != null && req.getDisableCache();
+    // Skip cache check and run discover.
+    if (skipCacheCheck) {
+      return runDiscoverSchemaJob(source, sourceDef, sourceVersion, req.getPriority());
+    }
+
+    // Check cache.
+    final String configHash = HASH_FUNCTION.hashBytes(Jsons.serialize(source.getConfiguration()).getBytes(
+        Charsets.UTF_8)).toString();
+    final String connectorVersion = sourceVersion.getDockerImageTag();
+
+    final Optional<ActorCatalog> existingCatalog =
+        configRepository.getActorCatalog(req.getSourceId(), connectorVersion, configHash);
+
+    // No catalog exists, run discover.
+    if (existingCatalog.isEmpty()) {
+      return runDiscoverSchemaJob(source, sourceDef, sourceVersion, req.getPriority());
+    }
+
+    // We have a catalog cached, no need to run discover. Return cached catalog.
+    final AirbyteCatalog airbyteCatalog = Jsons.object(existingCatalog.get().getCatalog(), AirbyteCatalog.class);
+    final SynchronousJobRead emptyJob = new SynchronousJobRead()
+        .configId("NoConfiguration")
+        .configType(JobConfigType.DISCOVER_SCHEMA)
+        .id(UUID.randomUUID())
+        .createdAt(0L)
+        .endedAt(0L)
+        .logs(new LogRead().logLines(new ArrayList<>()))
+        .succeeded(true);
+    return new SourceDiscoverSchemaRead()
+        .catalog(CatalogConverter.toApi(airbyteCatalog, sourceVersion))
+        .jobInfo(emptyJob)
+        .catalogId(existingCatalog.get().getId());
+  }
+
+  private SourceDiscoverSchemaRead runDiscoverSchemaJob(
+                                                        final SourceConnection source,
+                                                        final StandardSourceDefinition sourceDef,
+                                                        final ActorDefinitionVersion sourceVersion,
+                                                        final io.airbyte.api.model.generated.WorkloadPriority priority)
+      throws ConfigNotFoundException, IOException {
+    final boolean isCustomConnector = sourceDef.getCustom();
+    // ResourceRequirements are read from actor definition and can be null; but if it's not null it will
+    // have higher priority and overwrite
+    // the default settings in WorkerConfig.
+    final ResourceRequirements resourceRequirements =
+        getResourceRequirementsForJobType(sourceDef.getResourceRequirements(), JobType.DISCOVER_SCHEMA)
+            .orElse(null);
+
+    final SynchronousResponse<UUID> persistedCatalogId =
+        synchronousSchedulerClient.createDiscoverSchemaJob(
+            source,
+            sourceVersion,
+            isCustomConnector,
+            resourceRequirements,
+            priority == null ? WorkloadPriority.HIGH : WorkloadPriority.fromValue(priority.toString()));
+
+    return retrieveDiscoveredSchema(persistedCatalogId, sourceVersion);
   }
 
   public void applySchemaChangeForSource(final SourceAutoPropagateChange sourceAutoPropagateChange)
@@ -523,7 +608,7 @@ public class SchedulerHandler {
   }
 
   public JobInfoRead resetConnectionStream(final ConnectionStreamRequestBody connectionStreamRequestBody)
-      throws IOException {
+      throws IOException, ConfigNotFoundException {
     return submitResetConnectionStreamsToWorker(connectionStreamRequestBody.getConnectionId(), connectionStreamRequestBody.getStreams());
   }
 
@@ -734,10 +819,11 @@ public class SchedulerHandler {
   }
 
   private JobInfoRead submitResetConnectionStreamsToWorker(final UUID connectionId, final List<ConnectionStream> streams)
-      throws IOException, IllegalStateException {
-    return submitResetConnectionToWorker(connectionId,
-        streams.stream().map(s -> new StreamDescriptor().withName(s.getStreamName()).withNamespace(s.getStreamNamespace())).collect(
-            Collectors.toList()));
+      throws IOException, IllegalStateException, ConfigNotFoundException {
+    final List<StreamDescriptor> actualStreamsToReset = streams.isEmpty()
+        ? configRepository.getAllStreamsForConnection(connectionId)
+        : streams.stream().map(s -> new StreamDescriptor().withName(s.getStreamName()).withNamespace(s.getStreamNamespace())).toList();
+    return submitResetConnectionToWorker(connectionId, actualStreamsToReset);
   }
 
   private JobInfoRead readJobFromResult(final ManualOperationResult manualOperationResult) throws IOException, IllegalStateException {
